Creación de DAO (usuario, estudiante) Creación de modelos Creación de estilos input, botones, texto UI - Login v1 UI - Registro v1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">GesAct</string>
+    <string name="register"><u>¿Primera vez? Regístrate</u></string>
+    <string name="name">Nombre(s)</string>
+    <string name="last_name">Apellidos</string>
+    <string name="username">Nombre de usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="cancel">Cancelar</string>
+    <string name="registrar">Registrar</string>
 </resources>
