--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,6 @@
     <string name="alumnos">Alumnos</string>
     <string name="criterions">Criterios de evaluacion</string>
     <string name="add">Agregar</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="group">Grupo:</string>
     <string name="grado">Grado:</string>
@@ -31,6 +30,7 @@
     <string name="subjects">Materias</string>
     <string name="registros">Registros</string>
     <string name="kind">Tipo</string>
+    <string name="empty_fields">Por favor no deje ningún campo vacío</string>
     <string name="subject">Materia:</string>
     <string name="percent_value">Valor dentro de la calificación (%)</string>
     <string name="min_value">Valor mínimo por evidencia</string>
